# postcode

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: realease.yml
scripts/: release.py
src/postcode/: __init__.py  error.py  logging.py  result.py  service.py
src/postcode/handlers/: __init__.py  base.py  errors.py  factory.py  regex.py  types.py
src/postcode/handlers/http/: osdatahub.py  postcode_io.py
src/postcode/postcode/: __init__.py  errors.py  format.py  model.py  normalize.py  validation.py
tests/: test_formatting.py  test_normalize.py  test_parsing.py  test_validation.py
tests/data/: formatting.py  parsing.py
